--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
 		<section id="info" class="h-card">
 			<h2></h2>
 				<span id="avatar">
-					<img src="../../extras/images/2.png" alt="Avatar"/></a><br />
+					<img loading="lazy" class="u-photo" src="../../extras/images/2.png" alt=" "/></a><br />
 				</span>
 			<ul>
 				<br><li>Nikhil (निखिल)</li>
