--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 				................................
 				<ul>
 					<li><a href="" target="_parent">Home</a></li>
-					<li><a href="/about/" target="_parent">About Me</a></li>
-					<li><a href="/content/" target="_parent">Visual</a></li>
+					<li><a href="about/" target="_parent">About Me</a></li>
+					<li><a href="content/" target="_parent">Visual</a></li>
 					<li><a href="bookmarks" target="_parent">Bookmarks</a></li>
 					....................
-					<li><a href="/resume/" target="_parent">Resume</a></li>
-					<li><a href="/work/" target="_parent">work with me</a></li>
+					<li><a href="resume/" target="_parent">Resume</a></li>
+					<li><a href="work/" target="_parent">work with me</a></li>
 					........................
 					<li><a href="https://git.fosscommunity.in/on2" target="_parent">/git/</a>: packages</li>
-					<li><a href="/project/" target="_parent"> Projects</a></li>
+					<li><a href="project/" target="_parent"> Projects</a></li>
 				</ul>
 				................................
 			</details>
