--- a/content/stories2.html
+++ b/content/stories2.html
@@ -18,7 +18,7 @@
 				<summary><a></a></summary>
 				................................
 				<ul>
-					<li><a href="content/reels.html" target="_parent">play/music</a></li>
+					<li><a href="content/reels.html" target="_parent">theatre/music</a></li>
 					<li><a href="content/stories.html" target="_parent">media dump1</a></li>
 					<li><a href="content/stories2.html" target="_parent">media dump2</a></li>
 					<li><a href="content/index.html" target="_parent">posts</a></li>
