--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<header class="ccsticky-nav">
 		<nav>
-			<details close="">
+			<details open="">
 				<summary><a>Links</a></summary>
 				................................
 				<ul>
@@ -43,7 +43,7 @@
 					<img loading="lazy" class="u-photo" src="../../extras/images/2.png" alt=" "/></a><br />
 				</span>
 			<ul>
-				<br><li>Nikhil (निखिल)</li>
+				<li>Nikhil (निखिल)</li>
 				<li>Location: India</li>
 				<li>E-Mail: <a class="u-email" href="mailto:4wg@keemail.me">4wg@keemail.me</a></li>
 				<li>irc/Matrix: <a href="https://matrix.to/#/@on:tchncs.de" class="u-impp">on:tchncs.de</a></li>
@@ -51,18 +51,18 @@
 				<pre><code>-----BEGIN <a href="https://web.archive.org/web/20150302173832/http://www.geekcode.com/geek.html">GEEK CODE</a> BLOCK-----
 Version: 3.12
 GCS/IT dpu s:-- a-- C++++ U++++ P+/++ L++++ E-/--- W++ N++ o? K- w-- O? M-- V? PS++ PE/<abbr title="money should be abolished">---</abbr> Y++ PGP t? 5? X? tv- b+ DI? D? G++ e++ h* !r/-- z-- 
-------END GEEK CODE BLOCK------</code></pre>
+------END GEEK CODE BLOCK------</code></pre></ul>
 		<p>If you'd like to <a href="../work/">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, </br>I'd love to hear from you, I live in India, I maybe delayed in my response if our timezone's don't match.</p>
 		</section></main> 
-		<section id="bio">
-			<h2>bio</h2>
-			<p> I am a economics student, recently completed my master's with specialization in trade and finance. currently i am looking for research projects/engagement in the field of  behavioural science, nutrition, health economics & developmental economics.</p>
-			<p> i am also an athlete, i do participate in track and field sports, i last participated in <a href="https://run.indianathletics.in/igp6/">Indian Grand Prix vi 2019</a> and secures 3th position in 100m & 200m events.</pp>
-			<p>I also significantly contribute to the field of localization of FOSS (free and open-source software). I
-				localized the interface of <a href="https://github.com/jitsi/jitsi-meet/pull/8968">Jitsi Meet</a> and some parts of GNU documentation. I use and contribute to free and
+		<section id=bio><details open="">
+			<summary><a>bio</a></summary>
+			<p> i am a economics student, recently completed my master's with specialization in trade and finance. currently i am looking for research projects/engagement in the field of  behavioural science, nutrition, health economics & developmental economics.</p>
+			<p> i am also an athlete, i do participate in track and field sports, i last participated in <a href="https://run.indianathletics.in/igp6/">indian grand prix vi 2019</a> and secures 3th position in 100m & 200m events.</pp>
+			<p>i also significantly contribute to the field of localization of FOSS (free and open-source software). i
+				localized the interface of <a href="https://github.com/jitsi/jitsi-meet/pull/8968">jitsi meet</a> and some parts of GNU documentation. i use and contribute to free and
 				open-source software, open data, and localization, and am currently part of the FSCI
-				(Free Software Community of India).</p>
-			<p> i am volunteering National Service Scheme (NSS) for last 5 years, we organize various events - health camp, blood donation camp, plantation and cleanliness drive, awareness programmes, street plays & unit camp in villages.</p> 
+				(free foftware community of india).</p>
+			<p> i am volunteering national service scheme (NSS) for last 5 years, we organize various events - health camp, blood donation camp, plantation and cleanliness drive, awareness programmes, street plays & unit camp in villages.</p> 
 			<p> i speak Hindi(native language), English, some bases of Indian Sign Language and other Indic Lannguages. </p>
 			<p>i also do sysadmin stuff, i like to tweak system, software, and hardware. i like experimenting with OpenStreetMap data, peer-to-peer web technologies,
 				custom kernel compilation, and open hardware like raspberry pi. </p>
