--- a/project/index.html
+++ b/project/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<header class="ccsticky-nav">
 		<nav>
-			<details close="">
+			<details open="">
 				<summary><a>Links</a></summary>
 				................................
 				<ul>
@@ -38,40 +38,64 @@
 
 
 <body><main>
-		<section> 
+	<section id=project> 
+		<summary><a>Geopolitics and Mode of International Collaboration (Dissertation Project)	 March - June 2023</a></summary>
 
+<ul><li>under the guidance of Prof Sugata Marjit (First Distinguished Professor of IIFT)</li><br>
+	<li>I explored the strategic importance of international collaboration in mitigating risks arising from geopolitical tensions and other idiosyncratic factors, such as the impact of COVID-related border closures. I developed a game-theoretical framework to illustrate how the international relations of parent countries can influence multinational corporations to form International Joint Ventures (IJVs) as a risk mitigation strategy. This study highlighted that economic parameters alone might not suffice, as the possibility of tariff imposition due to strained international relations is primarily influenced by geopolitics.</li>
+</ul></section>
+</details>
 
-			<br><h3>Geopolitics and Mode of International Collaboration (Dissertation Project)	 March - June 2023</h3>
-<ul><li>under the guidance of Prof Sugata Marjit (First Distinguished Professor of IIFT)</li>
-	<li>In this dissertation, I explored the strategic importance of international collaboration in mitigating risks arising from geopolitical tensions and other idiosyncratic factors, such as the impact of COVID-related border closures. I developed a game-theoretical framework to illustrate how the international relations of parent countries can influence multinational corporations to form International Joint Ventures (IJVs) as a risk mitigation strategy. This study highlighted that economic parameters alone might not suffice, as the possibility of tariff imposition due to strained international relations is primarily influenced by geopolitics.</li>
-</ul>
-<br><h3>CAPM verification in base R	 Jan - Feb 2023</h3>
-<ul><li>Dr AKS Chand, Prof of Economics, IIFT Delhi</li>
+<section id=project> 
+	<summary><a>CAPM verification in base R	 Jan - Feb 2023</a></summary>
+<ul><li>Dr AKS Chand, Prof of Economics, IIFT Delhi</li><br>
 <li>I conducted a rigorous analysis to verify the Capital Asset Pricing Model (CAPM) using the R programming language. By collecting and analyzing closing prices of S&P 500 BSE stocks over 15 years, I calculated annualized returns and built a variance-covariance matrix. Additionally, I determined monthly returns for the S&P 500 BSE and performed regression analysis to empirically test the Security Market Line.</li>
+</ul></section>
+</details>
+
+<section id=project> 
+	<summary><a>Impact of India’s Trade Liberalization on Income Inequality	Oct - Dec 2022</a></summary>
+
+	<ul><li>	Dr. Basanta K. Sahu, Professor & Head Economics Division, IIFT Delhi</li>
+					<br>	<li>This project examines the causal relationship between India's trade liberalization and income inequality while controlling for various income inequality factors. I employed programmed loops in R to calculate Gini coefficients and visualized the relationship between trade openness and income inequality trends over time using trade-to-GDP ratios.</li>
 </ul>
 
-	<br><h3>Impact of India’s Trade Liberalization on Income Inequality	Oct - Dec 2022</h3>
-	<ul><li>
-		Dr. Basanta K. Sahu, Professor & Head Economics Division, IIFT Delhi</li>
-	<li>In this project, I examined the causal relationship between India's trade liberalization and income inequality while controlling for various income inequality factors. I employed programmed loops in R to calculate Gini coefficients and visualized the relationship between trade openness and income inequality trends over time using trade-to-GDP ratios.</li>
-</ul>
-	<br><h3>Time Zone Differences, Service Trade, and Implications for Factor Prices (Paper Presentation)	 Sep - Oct 2022</h3>
+</section>
+</details>
+
+<section id=project> 
+	<summary><a>Time Zone Differences, Service Trade, and Implications for Factor Prices (Paper Presentation)	 Sep - Oct 2022</a></summary>
 		<ul><li>Prof Sugata Marjit (First Distinguished Professor of IIFT)	</li>
-			<li>I presented a paper that delved into the impact of time zone differences on international trade and factor markets. By introducing a new dimension to existing trade theories, I explined how time-saving improvements in business-services trade can lead to economic growth, extending beyond conventional trade models.
+			<br><li>I presented a paper that delved into the impact of time zone differences on international trade and factor markets. By introducing a new dimension to existing trade theories, I explined how time-saving improvements in business-services trade can lead to economic growth, extending beyond conventional trade models.
 </li></ul>
-				<br><h3>Estimating Rybczynski elasticity for the case of South Korea using Prof Jones’s concept	 Aug - Oct 2022</h3>
+</section>
+</details>
+
+<section id=project>
+	<summary><a>Estimating Rybczynski elasticity for the case of South Korea using Prof Jones’s concept	 Aug - Oct 2022</a></summary>
 					<ul><li>Dr Ranajoy Bhattacharyya, Prof of International Trade, IIFT Kolkata</li>
-<li>This project extended the analysis of Rybczynski's theorem to study variations in quantities of two factors of production using Prof. Jones's concept. I collected extensive time series data, performed statistical tests for stationarity, estimated GDP with the translog method, and ran sector-wise time series regression to determine factor endowments and intensities.</li>
+<br><li>This project extended the analysis of Rybczynski's theorem to study variations in quantities of two factors of production using Prof. Jones's concept. I collected extensive time series data, performed statistical tests for stationarity, estimated GDP with the translog method, and ran sector-wise time series regression to determine factor endowments and intensities.</li>
 					</li></ul>
-					<br><h3>Analyzing Intensive and Extensive Margins, Price, Quantitative Margin, and RCA for HS-710239 Diamonds	    Aug - Oct 2022 </h3>
+
+				</section>
+			</details>
+					<section id=project> 
+						<summary><a>Analyzing Intensive and Extensive Margins, Price, Quantitative Margin, and RCA for HS-710239 Diamonds	    Aug - Oct 2022</a></summary>
 						<ul><li>Prof Biswajit Nag, HOD(Economics & Trade Policy), IIFT Delhi</li>
-							<li>This project involved a comprehensive analysis of India's trade in HS-710239 Diamonds (excluding industrial diamonds) from 2002 to 2019. I assessed the Revealed Comparative Advantage (RCA) between India and partner countries, evaluated intensive and extensive margins, analyzed price and quantitative margins, and highlighted India's trade dynamics in the diamond sector.
+						<br>	<li>This project involved a comprehensive analysis of India's trade in HS-710239 Diamonds (excluding industrial diamonds) from 2002 to 2019. I assessed the Revealed Comparative Advantage (RCA) between India and partner countries, evaluated intensive and extensive margins, analyzed price and quantitative margins, and highlighted India's trade dynamics in the diamond sector.
 </li></ul>
-								<br><h3>DebConf 2021 (Annual conference for Debian contributors)	 July - Aug 2021</h3>
+
+</section>
+</details>
+
+<section id=project> 
+	<summary><a>DebConf 2021 (Annual conference for Debian contributors)	 July - Aug 2021</a></summary>
 <ul><li>I presented two talks at DebConf 2021. The first discussed software localization workflows, emphasizing their importance in development and communications infrastructure. The second talk focused on freedom and privacy guidelines, critically reviewing their significance in the context of free and open-source software applications.
 </li></ul>
-		</section>
-                <section> <h4>currently, i’m not available to work full-time, and am  looking for both full-time and part-time engagements.</h4></section>
+</section>
+</details>
+
+<section> currently, i’m available to work full-time, and am  looking for both full-time and part-time engagements.</section>
 	  <footer>
        		 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img loading="lazy" alt="CC-BY-SA" src="https://mirrors.creativecommons.org/presskit/buttons/80x15/svg/by-sa.svg" /></a>
   	 </footer>
