--- a/work/index.html
+++ b/work/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<header class="ccsticky-nav">
 		<nav>
-			<details close="">
+			<details open="">
 				<summary><a>Links</a></summary>
 				................................
 				<ul>
@@ -39,7 +39,7 @@
 
 <body><main>
 		<section id=work> 
-			<br><h3>my work usally involves : </h3>
+			<h3>my work usually involves : </h3>
 		<ul>
 			<li>policy analysis: economic and development policy, geopolitics, technology transfer, trade agreements.</li>
 			<li>empirical research: time series analysis, experimental design, qasi-Experimental Methods, sampling, hypothesis testing, causal and statistical inference, handling complex datasets.</li>
@@ -61,7 +61,7 @@
 			</ul>
 			if this is you, please feel free to <a href="mailto:nikhil_eco23@iift.edu">get in touch</a>, i’ll be happy to discuss a cut-rate for my services. <br>i would also be willing to explore technologies and tools i am not familiar with as a way to mutually benefit us.
 		</section>
-                <section> <h4>currently, i’m not available to work full-time, and am  looking for both full-time and part-time engagements.</h4></section>
+                <section> <h4>currently, i’m available to work full-time, and am  looking for both full-time and part-time engagements.</h4></section>
 	  <footer>
        		 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img loading="lazy" alt="CC-BY-SA" src="https://mirrors.creativecommons.org/presskit/buttons/80x15/svg/by-sa.svg" /></a>
   	 </footer>
