--- a/dark/about/index.html
+++ b/dark/about/index.html
@@ -31,7 +31,7 @@
 			<details close="">
 				<summary><a>Themes&ensp;&ensp;&ensp;&ensp;&ensp;</a></summary>
 				<li><a href="index.x.html">plain HTML</a></li>
-				<li><a href="../dark/about/">Dark Mode</a></li>
+				<li><a href="index.html">Dark Mode</a></li>
 			</details>
 		</nav3>
 	</header>
@@ -40,7 +40,7 @@
 		<section id="info" class="h-card">
 			<h2></h2>
 				<span id="avatar">
-					<img loading="lazy" class="invertible" src="../../extras/images/2.png" alt=" "/></a><br />
+					<img loading="lazy" class="u-photo" src="../../extras/images/2.png" alt=" "/></a><br />
 				</span>
 			<ul>
 				<li>Nikhil (निखिल)</li>
