--- a/dark/resume/index.html
+++ b/dark/resume/index.html
@@ -38,7 +38,7 @@
 
 
 <body><main>
-		<section  class="invertible"> 
+		<section> 
             <embed src="CV_Nikhil.pdf" width="100%" height="555"
             type="application/pdf">
                    </section>
