final theme implementation

--- a/dd/index.html
+++ b/dd/index.html
@@ -3,30 +3,17 @@
 <head>
                 <meta charset="utf-8"/>
                 <link rel="stylesheet" type="text/css" href="css/style.css"/>
-                <link rel="stylesheet" type="text/css" href="css/theme.css"/>
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <title>Home</title>
 </head>
 <body> <header>I quit working and not taking any engagements. this website isn't maintained anymore, links and pages are intentionally deleted.</header>
-	<main> <nav> <details open="">
-						<summary>Links</summary>
-			.....................................
-                        <ul>
-                                <li><a href="">Home</a></li>
-                                <li><a href="about/index.l.html#info">About Me</a></li>
-				<li><a href="activism">Activism</a></li>
-				<li><a href="bookmarks">Bookmarks</a></li>
-                                <li><a href="econ">Books/Notes</a></li>
-				<li><a href="cs">coding style</a></li>
-                                <li><a href="resume">Resume</a></li>
-                                <li><a href="work/index.l.html#work">work with me</a></li>
-                        .............................
-                                <li><a href="git">/git/</a>: packages</li>
-				<li><a href="dot"> /dot:files/ /scripts/</a></li>
-                        </ul>
-                        .....................................
-		</details></nav>
-		<themes><details close=""> <summary>Themes&ensp;&ensp;&ensp;</summary>&ensp;<a href="index.x.html">plain HTML</a>&ensp;<br> &ensp;<a href="index.html">Dark Mode</a></details></themes>
+	<main> <nav><iframe src="nav.html" seamless height="511"></iframe></nav>
+
+	<themes><details close=""><summary>Themes&ensp;&ensp;&ensp;</summary>&ensp;<a href="index.x.html">plain HTML</a>&ensp;<br>&ensp;<a href="index.l.html">Light Mode</a>
+    
+        <input id="dark-mode" type="checkbox" onclick="document.documentElement.classList.toggle('dark-mode')">	
+        <label for="dark-mode">Dark mode</label>
+        </details></themes>
 
 		<section><h3><br>List of articles</h3>
            	  <ol class="indexlist">
@@ -47,7 +34,7 @@
 
             <input type="submit" class="staticrypt-decrypt-button" value="DECRYPT"/>
         </form>
-        <p><a href="https://nikhilam.ml/about/index.l.html#contact">contact me</a> to get access</p>
+        <p><a href="https://nikhilam.ml/about#contact">contact me</a> to get access</p>
 </p>
     </div>
 
