--- a/txt/about/index.html
+++ b/txt/about/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
+	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/theme.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<title>About</title>
-</head>
-<body> <header>I quit working and not taking any engagements. this website isn't maintained anymore, links and pages are intentionally deleted.</header>
-	<main> <nav> <details close="">
-						<summary>Links</summary>
-			                       .....................................
-                        <ul>
-                                <li><a href="../">Home</a></li>
-                                <li><a href="../about#info">About Me</a></li>
-				<li><a href="../activism">Activism</a></li>
-				<li><a href="../bookmarks">Bookmarks</a></li>
-                                <li><a href="../econ">Books/Notes</a></li>
-				<li><a href="../cs">coding style</a></li>
-                                <li><a href="../resume">Resume</a></li>
-                                <li><a href="../work#work">work with me</a></li>
-                        .............................
-                                <li><a href="../git">/git/</a>: packages</li>
-				<li><a href="../dot"> /dot:files/ /scripts/</a></li>
-                        </ul>
-                        .....................................
-		</details></nav>
-               		 	<themes><details close=""><summary>Themes&ensp;&ensp;&ensp;</summary>&ensp;<a href="index.x.html">plain HTML</a>&ensp;<br>&ensp;<a href="index.l.html">Light Mode</a></details></themes>
-
+		<title>Home</title>
+	</head>
+	<header class="ccsticky-nav">
+		<nav>
+			<details open="">
+				<summary><a>Links</a></summary>
+				................................
+				<ul>
+					<li><a href="../" target="_parent">Home</a></li>
+					<li><a href="../about/" target="_parent">About Me</a></li>
+					<li><a href="../content" target="_parent">Visual</a></li>
+					<li><a href="../bookmarks" target="_parent">Bookmarks</a></li>
+					....................
+					<li><a href="../resume" target="_parent">Resume</a></li>
+					<li><a href="../work#work" target="_parent">work with me</a></li>
+					........................
+					<li><a href="https://git.fosscommunity.in/on2" target="_parent">/git/</a>: packages</li>
+					<li><a href="../project" target="_parent"> Projects</a></li>
+				</ul>
+				................................
+			</details>
+		</nav>
+		<nav3>
+			<details close="">
+				<summary><a>Themes&ensp;&ensp;&ensp;&ensp;&ensp;</a></summary>
+				<li><a href="index.x.html">plain HTML</a></li>
+				<li><a href="index.html">Dark Mode</a></li>
+			</details>
+		</nav3>
+	</header>
+		<main> 
+		<body>
 		<section id="info" class="h-card">
 			<h2></h2>
 				<span id="avatar">
-					<img loading="lazy" class="u-photo" src="../extras/images/2.png" alt="Avatar"/></a><br />
+					<img loading="lazy" class="u-photo" src="../../extras/images/2.png" alt=" "/></a><br />
 				</span>
 			<ul>
 				<li>Nikhil (निखिल)</li>
@@ -42,35 +51,39 @@
 				<pre><code>-----BEGIN <a href="https://web.archive.org/web/20150302173832/http://www.geekcode.com/geek.html">GEEK CODE</a> BLOCK-----
 Version: 3.12
 GCS/IT dpu s:-- a-- C++++ U++++ P+/++ L++++ E-/--- W++ N++ o? K- w-- O? M-- V? PS++ PE/<abbr title="money should be abolished">---</abbr> Y++ PGP t? 5? X? tv- b+ DI? D? G++ e++ h* !r/-- z-- 
-------END GEEK CODE BLOCK------</code></pre>
-				<p>If you'd like to <a href="../work#work">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, </br>I'd love to hear from you, I live in India, I maybe delayed in my response if our timezone's don't match.</p>
-		</section></main>
-		<section id="bio">
-			<h2>Bio</h2>
-			<p> My name is Nikhil, I am a economics student, currently i am studying nutrition based poverty, health economics & developmental economics.</p>
-			<p> I do participate in athletics events, i last participated in <a href="https://run.indianathletics.in/igp6/">Indian Grand Prix vi 2019</a> and secures 3th position in 100m & 200m events.</pp>
-			<p> i am volunteering National Service Scheme (NSS) for last 5 years, we organize various events - health camp, blood donation camp, plantation and cleanliness drive, awareness programmes, street plays & unit camp in villages.</p> 
-			<p> i speak Hindi(native language), English(not really good at it), some bases of Indian Sign Language and other Indic Lannguages. </p>
-			<p>i also do sysadmin stuff, i like to tweak system, software, hardware. </p>
+------END GEEK CODE BLOCK------</code></pre></ul>
+		<p>If you'd like to <a href="../work/">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, </br>I'd love to hear from you, I live in India, I maybe delayed in my response if our timezone's don't match.</p>
+		</section></main> 
+		<section id=bio><details open="">
+			<summary><a>bio</a></summary>
+			<p> i am a economics student, recently completed my master's with specialization in trade and finance. currently i am looking for research projects/engagement in the field of  behavioural science, nutrition, health economics & developmental economics.</p>
+			<p> i am also an athlete, i do participate in track and field sports, i last participated in <a href="https://run.indianathletics.in/igp6/">indian grand prix vi 2019</a> and secures 3th position in 100m & 200m events.</pp>
+			<p>i also significantly contribute to the field of localization of FOSS (free and open-source software). i
+				localized the interface of <a href="https://github.com/jitsi/jitsi-meet/pull/8968">jitsi meet</a> and some parts of GNU documentation. i use and contribute to free and
+				open-source software, open data, and localization, and am currently part of the FSCI
+				(free foftware community of india).</p>
+			<p> i am volunteering national service scheme (NSS) for last 5 years, we organize various events - health camp, blood donation camp, plantation and cleanliness drive, awareness programmes, street plays & unit camp in villages.</p> 
+			<p> i speak Hindi(native language), English, some bases of Indian Sign Language and other Indic Lannguages. </p>
+			<p>i also do sysadmin stuff, i like to tweak system, software, and hardware. i like experimenting with OpenStreetMap data, peer-to-peer web technologies,
+				custom kernel compilation, and open hardware like raspberry pi. </p>
+				<p>when i skateboarding i feel free, and i am avid listner of classic folk and rock music</p>
 		</section>
-		<section id=FundamentalTheory>
-			<h2>Fundamental Theories</h2>
+		<section id=FundamentalTheory><details close="">
+		<summary><a>person believes</a></summary>
 			<ul>
 			<!--	<li>There is a large wheel going round and round and we go round and round with it.</li>
 				<li>There is other living and non-living with us on this wheel,but currently human are dominanting the earth and destroying other species and nature.</li> -->
-				<li>We all are equal, all the intelligence, power, money, status, humour, taste, personality, beauty are just coincidence</li>
-                                <li>No purpose of life, that all these minutia-they are all meaningless. You have to find something that gives you a reason to live, something that makes you feel like doing meaningful. </li>
-                                <li>No god, soul, nothing after death, matter is the only reality and that mind and consciousness are derived out.
-				<li>No one owns anything, some elits usuped majority of resources.</li>
-				<li>The ultimate jail is system controlled by conglomerates</li>
-			<!--	<li>Consumption can be temporary reason for happiness but also can be a reason of extreame misery</li>
-				 <li></li>-->
-				
+				<li>we all are equal, all the intelligence, power, money, status, humour, taste, personality, beauty are just coincidence</li>
+                                <li>no purpose of life, that all these minutia-they are all meaningless. You have to find something that gives you a reason to live, something that makes you feel like doing meaningful. </li>
+                                <li>no god, soul, nothing after death, matter is the only reality and that mind and consciousness are derived out.
+				<li>no one owns anything, some elits usuped majority of resources.</li>
+				<li>the ultimate jail is system controlled by conglomerates</li>
+				<li>consumption can be temporary reason for happiness but also can be a reason of extreame misery</li>				
 				<li>have one life to live and one should strive to enjoy it to the fullest extent as long as such enjoyment does not violate rights and sensibilities of others in the society.</li>
 			</ul>
-		</section>
-		<section id=common>
-			<h2>Common Practices</h2>
+		</section></details>
+		<section id=config><details close="">
+			<summary><a>common practices</a></summary>
 			<ul>
 				<li>treat,respect everyone equally, promote respectful and equal treatment for all (independent of the nature of their work, status, caste, religion, color, race, sex, language etc.)</li>
 				<li>not to hate anything/anyone</li>
@@ -80,11 +93,10 @@ GCS/IT dpu s:-- a-- C++++ U++++ P+/++ L++++ E-/--- W++ N++ o? K- w-- O? M-- V? P
 				<li>use public transport, cycles and other manual vehicles 
 				<li>only use and recommend software/service that are truly <a href="https://www.gnu.org/philosophy/free-sw.en.html">free</a> , if something cannot be self hosted and is not free software/service I don't prefer to use it  .</li>
 			</ul>
-		</section>
-		<main id="config"><details close="">
+		</section></details>
+		<section id="config"><details close="">
 	
-			<summary>	<a>My machines</a></summary>
-			<div class="container">
+			<summary>	<a>my machines</a></summary>
 			<table>
 				<thead><tr><th>Hostname</th><th>OS</th><th>Mainboard / SoC</th><th>CPU</th><th>GPU</th><th>Storage</th><th>RAM</th><th>Network</th></tr></thead>
 				<tbody>
@@ -146,8 +158,8 @@ GCS/IT dpu s:-- a-- C++++ U++++ P+/++ L++++ E-/--- W++ N++ o? K- w-- O? M-- V? P
 					</tr>-->
 				</tbody>
 
-			</table></div>
-		 </details></main>
+			</table>
+		</section> </details>
 		
          <footer>
 			<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img loading="lazy" alt="CC-BY-SA" src="https://mirrors.creativecommons.org/presskit/buttons/80x15/svg/by-sa.svg" /></a>
