--- a/txt/resume/index.html
+++ b/txt/resume/index.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+	<head>
 		<meta charset="utf-8"/>
-		<title>Nikhil निखिल</title>
-		<meta name="viewport" content="width=device-width,minimum-scale=1" />
-		<link rel="stylesheet" href="style.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/theme.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Home</title>
 	</head>
-	<body>
-		<main class="h-resume">
-			<h1>About</h1>
-			<ul class="p-contact h-card">
-				<li class="p-name"><span class="p-given-name">Nikhil</span> <span class="p-nickname">निखिल</span> <span class="p-family-name small-caps"> </span></li>
-				<li>E-Mail: <a class="u-email" href="mailto:4wg@keemail.me">4wg@keemail.me</a></li>
-			</ul>
+	<header class="ccsticky-nav">
+		<nav>
+			<details open="">
+				<summary><a>Links</a></summary>
+				................................
+				<ul>
+					<li><a href="../" target="_parent">Home</a></li>
+					<li><a href="../about/" target="_parent">About Me</a></li>
+					<li><a href="../content" target="_parent">Visual</a></li>
+					<li><a href="../bookmarks" target="_parent">Bookmarks</a></li>
+					....................
+					<li><a href="../resume" target="_parent">Resume</a></li>
+					<li><a href="../work#work" target="_parent">work with me</a></li>
+					........................
+					<li><a href="https://git.fosscommunity.in/on2" target="_parent">/git/</a>: packages</li>
+					<li><a href="../project" target="_parent"> Projects</a></li>
+				</ul>
+				................................
+			</details>
+		</nav>
+		<nav3>
+			<details close="">
+				<summary><a>Themes&ensp;&ensp;&ensp;&ensp;&ensp;</a></summary>
+				<li><a href="index.x.html">plain HTML</a></li>
+				<li><a href="index.html">Dark Mode</a></li>
+			</details>
+		</nav3>
+	</header>
 
-			<h2 id="background">Background</h2>
-			<ul>
-				<li class="h-event"><time class="dt-start">2020-04</time> — present: <span class="p-summary">Maintaining a few small packages in Void software repository</span></li>
-<!--<li class="h-event"><time class="dt-start">2021-02</time> — present: <span class="p-summary">Proxy-Maintaining a part of Void software repository</span></li> -->
-				<li class="h-event"><time class="dt-start">2018-07</time> — present: <span class="p-summary">(Graduation) (BA Economics Hons)</span></li>
-				<li class="h-event"><time class="dt-start">2016</time> — present: <a href="https://en.wikipedia.org/wiki/National_Service_Scheme"> NSS </a> Volunteer</li>
-				<li class="h-event"><time class="dt-start">2017</time> — present: <a href="https://indianathletics.in/athlete-details/?id=1859">Athelete</a></li>
-				<li class="h-event"><time class="dt-start">2016</time> — <time class="dt-end">2018</time>: <span class="p-summary">(Higher-Secondary-School) (PCMB)</span></li>
-			</ul>
-			<h2 id="languages">Languages</h2>
-			<ul>
-				<li class="p-skill">Fluent: Hindi</li>
-				<li class="p-skill">Technical: English</li>
-				<li class="p-skill">Basic: Sign Language & Indic Languages</li>
-			</ul>
-			<h2 id="tools">Tools</h2>
-			<ul>
-				<li class="p-skill">Programming Languages: POSIX Shell &amp; Bash, Lips, C 99+, Perl, Python</li>
-				<li class="p-skill">Systems: Gentoo Linux, Alpine Linux, NetBSD, Void Linux, Debian GNU/Linux</li>
-				<li class="p-skill">Networking: routing (IPv6 &amp; IPv4) and firewalling with iptables/nftables</li>
-				<li class="p-skill">Web: (x)HTML5, CSS3,</li>
-				<li class="p-skill">Documentation: LaTeX, LibreOffice, PO, Vim </li>
-			</ul>
-			<h2 id="links">Links</h2>
-			<ul>
-				<li><a rel="me" href="https://gitlab.com/nik7777">Gitlab</a>, <a rel="me" href="https://github.com/4host">Github</a></li>
-				<li>Maintained Packages: <a rel="me" href="">Void Linux</a> </li>
-				<li><a rel="me" href="https://nikhilam.ml">Personal Website</a></li>
-			</ul>
-		</main>
-		<footer>Copyright <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> Nikhil(निखिल); inspired by the <a href="https://hacktivis.io"> page of Haelwenn lanodan Monnier</a>; This is also done to work well in paper/PDF export.</footer>
-	</body>
+
+<body><main>
+		<section> 
+            <embed src="CV_Nikhil.pdf" width="100%" height="555"
+            type="application/pdf">
+                   </section>
+                <section> <h4>currently, i’m available to work full-time, and am  looking for both full-time and part-time engagements.</h4></section>
+	  <footer>
+       		 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img loading="lazy" alt="CC-BY-SA" src="https://mirrors.creativecommons.org/presskit/buttons/80x15/svg/by-sa.svg" /></a>
+  	 </footer>
+
+ </body>
 </html>
