--- a/404.html
+++ b/404.html
@@ -74,8 +74,8 @@
 		<nav3>
 			<details close="">
 				<summary><a>Themes&ensp;&ensp;&ensp;&ensp;&ensp;</a></summary>
-				<li><a href="index.x.html">plain HTML</a></li>
-				<li><a href="index.html">Dark Mode</a></li>
+				<li><a href="../txt/">plain HTML</a></li>
+				<li><a href="../d/">Dark Mode</a></li>
 			</details>
 		</nav3>
 	</header>
