--- a/content/index.html
+++ b/content/index.html
@@ -49,8 +49,8 @@
 		<nav3>
 			<details close="">
 				<summary><a>Themes&ensp;&ensp;&ensp;&ensp;&ensp;</a></summary>
-				<li><a href="index.x.html">plain HTML</a></li>
-				<li><a href="index.html">Dark Mode</a></li>
+				<li><a href="../../txt/about/">plain HTML</a></li>
+				<li><a href="../../about/">Light Mode</a></li>
 			</details>
 		</nav3>
 	</header>
