--- a/content/reels.html
+++ b/content/reels.html
@@ -49,8 +49,8 @@
 		<nav3>
 			<details close="">
 				<summary><a>Themes&ensp;&ensp;&ensp;&ensp;&ensp;</a></summary>
-				<li><a href="index.x.html">plain HTML</a></li>
-				<li><a href="index.html">Dark Mode</a></li>
+				<li><a href="txt/content/reels.html">plain HTML</a></li>
+				<li><a href="d/content/reels.html">Dark Mode</a></li>
 			</details>
 		</nav3>
 	</header>
