--- a/dd/about/index.x.html
+++ b/dd/about/index.x.html
@@ -2,8 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/theme.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>About</title>
 </head>
@@ -12,21 +10,21 @@
 						<summary>Links</summary>
 			                       .....................................
                         <ul>
-                                <li><a href="../index.l.html">Home</a></li>
-                                <li><a href="../about/index.l.html#info">About Me</a></li>
+                                <li><a href="../">Home</a></li>
+                                <li><a href="../about/index.x.html#info">About Me</a></li>
 				<li><a href="../activism">Activism</a></li>
 				<li><a href="../bookmarks">Bookmarks</a></li>
                                 <li><a href="../econ">Books/Notes</a></li>
 				<li><a href="../cs">coding style</a></li>
                                 <li><a href="../resume">Resume</a></li>
-                                <li><a href="../work/index.l.html#work">work with me</a></li>
+                                <li><a href="../work/index.x.html#work">work with me</a></li>
                         .............................
                                 <li><a href="../git">/git/</a>: packages</li>
 				<li><a href="../dot"> /dot:files/ /scripts/</a></li>
                         </ul>
                         .....................................
 				</details></nav>
-               		 	<themes><details close=""><summary>Themes&ensp;&ensp;&ensp;</summary>&ensp;<a href="index.x.html">plain HTML</a>&ensp;<br>&ensp;<a href="index.html">Dark Mode</a></details></themes>
+               		 	<themes><details close=""><summary>Themes&ensp;&ensp;&ensp;</summary>&ensp;<a href="index.html">Dark Mode</a>&ensp;<br>&ensp;<a href="index.l.html">Light Mode</a></details></themes>
 		<section id="info" class="h-card">
 			<h2></h2>
 				<span id="avatar">
@@ -42,8 +40,9 @@
 Version: 3.12
 GCS/IT dpu s:-- a-- C++++ U++++ P+/++ L++++ E-/--- W++ N++ o? K- w-- O? M-- V? PS++ PE/<abbr title="money should be abolished">---</abbr> Y++ PGP t? 5? X? tv- b+ DI? D? G++ e++ h* !r/-- z-- 
 ------END GEEK CODE BLOCK------</code></pre>
-		<p>If you'd like to <a href="../work/index.l.html#work">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, </br>I'd love to hear from you, I live in India, I maybe delayed in my response if our timezone's don't match.</p>
-		</section></main> 
+		<p>If you'd like to <a href="../work/index.x.html#work">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, </br>I'd love to hear from you, I live in India, I maybe delayed in my response if our timezone's don't match.</p>
+		</section></main>
+
 		<section id="bio">
 			<h2>Bio</h2>
 			<p> My name is Nikhil, I am a economics student, currently i am studying nutrition based poverty, health economics & developmental economics.</p>
