--- a/txt/work/index.html
+++ b/txt/work/index.html
@@ -1,55 +1,67 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-                <meta charset="utf-8"/>
-                <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/theme.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Home</title>
+	</head>
+	<header class="ccsticky-nav">
+		<nav>
+			<details open="">
+				<summary><a>Links</a></summary>
+				................................
+				<ul>
+					<li><a href="../" target="_parent">Home</a></li>
+					<li><a href="../about/" target="_parent">About Me</a></li>
+					<li><a href="../content" target="_parent">Visual</a></li>
+					<li><a href="../bookmarks" target="_parent">Bookmarks</a></li>
+					....................
+					<li><a href="../resume" target="_parent">Resume</a></li>
+					<li><a href="../work#work" target="_parent">work with me</a></li>
+					........................
+					<li><a href="https://git.fosscommunity.in/on2" target="_parent">/git/</a>: packages</li>
+					<li><a href="../project" target="_parent"> Projects</a></li>
+				</ul>
+				................................
+			</details>
+		</nav>
+		<nav3>
+			<details close="">
+				<summary><a>Themes&ensp;&ensp;&ensp;&ensp;&ensp;</a></summary>
+				<li><a href="index.x.html">plain HTML</a></li>
+				<li><a href="index.html">Dark Mode</a></li>
+			</details>
+		</nav3>
+	</header>
 
-                <title>Work With Me</title>
-</head>
-<body> <header>I quit working and not taking any engagements. this website isn't maintained anymore, links and pages are intentionally deleted.</header>
-	<main> <nav> <details close="">
-						<summary>Links</summary>
-			                       .....................................
-                        <ul>
-                                <li><a href="../">Home</a></li>
-                                <li><a href="../about#info">About Me</a></li>
-				<li><a href="../activism">Activism</a></li>
-				<li><a href="bookmarks.html">Bookmarks</a></li>
-                                <li><a href="../econ">Books/Notes</a></li>
-				<li><a href="../cs">coding style</a></li>
-                                <li><a href="../resume">Resume</a></li>
-                                <li><a href="">work with me</a></li>
-                        .............................
-                                <li><a href="../git">/git/</a>: packages</li>
-				<li><a href="../dot"> /dot:files/ /scripts/</a></li>
-                        </ul>
-                        .....................................
-		</details></nav>
-               		 	<themes><details close=""><summary>Themes&ensp;&ensp;&ensp;</summary>&ensp;<a href="index.x.html">plain HTML</a>&ensp;<br>&ensp;<a href="index.l.html">Light Mode</a></details></themes>
 
+<body><main>
 		<section id=work> 
-			<h3>my work usally involves : </h3>
+			<h3>my work usually involves : </h3>
 		<ul>
-			<li>sysadmin</li>
+			<li>policy analysis: economic and development policy, geopolitics, technology transfer, trade agreements.</li>
+			<li>empirical research: time series analysis, experimental design, qasi-Experimental Methods, sampling, hypothesis testing, causal and statistical inference, handling complex datasets.</li>
 			<!--		<li>system software development - device driver, network driver,! <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  linux kernal debuging</li> -->
+			<li>data analysis: data pipeline, encompassing data cleansing, wrangling, visualization, model building, and interpretation.</li>				
+			<li>system administration: server maintenance, troubleshooting, networking (apache, nginx), peer-to-peer web technologies, custom kernel compilation, and managing cloud/VMs.</li>
 			<li>activism/volunteering - planning, organising play/events/camps & writting, translating documentation</li>
-			<li>video editing</li>
 		</ul>
 		</section></main>
 		<section>
 			are you a non-profit, activist, researcher, individual, and budget is limited ?<br> I’m interested in helping to those who are working in the domain of:
 			<ul>
-			<li>public policy</li>
-			<li>equality</li>
-			<li><a href="https://www.gnu.org/philosophy/free-sw.en.htm>">free software</a></li>
+			<li>development</li>
+			<li>human rights</li>
+			<li>sustainable development</li>
+			<li><a href="https://www.gnu.org/philosophy/free-sw.en.htm>">foss</a></li>
     			<li>free education</li>
 			<li>social service and awareness</li>
-			<li>environment protection</li>
 			</ul>
-			if this is you, please feel free to <a href="mailto:4wg@keemail.me">get in touch</a>, i’ll be happy to discuss a cut-rate for my services. <br>i would also be willing to explore technologies and tools i am not familiar with as a way to mutually benefit us.
+			if this is you, please feel free to <a href="mailto:nikhil_eco23@iift.edu">get in touch</a>, i’ll be happy to discuss a cut-rate for my services. <br>i would also be willing to explore technologies and tools i am not familiar with as a way to mutually benefit us.
 		</section>
-                <section> <h4>i’m not available to work full-time from September 2020. at the moment, i am not taking any part-time engagements.</h4></section>
+                <section> <h4>currently, i’m available to work full-time, and am  looking for both full-time and part-time engagements.</h4></section>
 	  <footer>
        		 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img loading="lazy" alt="CC-BY-SA" src="https://mirrors.creativecommons.org/presskit/buttons/80x15/svg/by-sa.svg" /></a>
   	 </footer>
