--- a/d/about/index.html
+++ b/d/about/index.html
@@ -40,7 +40,7 @@
 		<section id="info" class="h-card">
 			<h2></h2>
 				<span id="avatar">
-					<img loading="lazy" class="u-photo" src="../../extras/images/2.png" alt=" "/></a><br />
+					<img loading="lazy" class="invertible" style="max-width: 240px;" src="../../extras/images/2.png" alt=" "/></a><br />
 				</span>
 			<ul>
 				<li>Nikhil (निखिल)</li>
