--- a/d/about/index.html
+++ b/d/about/index.html
@@ -35,12 +35,12 @@
 			</details>
 		</nav3>
 	</header>
-		<main> 
+	<main> 
 		<body>
 		<section id="info" class="h-card">
 			<h2></h2>
 				<span id="avatar">
-					<img loading="lazy" class="invertible" style="max-width: 240px;" src="../../extras/images/2.png" alt=" "/></a><br />
+					<img loading="lazy" class="invertible" style="max-width: 290px;" src="../extras/images/2.png" alt=" "/></a><br />
 				</span>
 			<ul>
 				<li>Nikhil (निखिल)</li>
@@ -52,7 +52,7 @@
 Version: 3.12
 GCS/IT dpu s:-- a-- C++++ U++++ P+/++ L++++ E-/--- W++ N++ o? K- w-- O? M-- V? PS++ PE/<abbr title="money should be abolished">---</abbr> Y++ PGP t? 5? X? tv- b+ DI? D? G++ e++ h* !r/-- z-- 
 ------END GEEK CODE BLOCK------</code></pre></ul>
-		<p>If you'd like to <a href="../work/">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, </br>I'd love to hear from you, I live in India, I maybe delayed in my response if our timezone's don't match.</p>
+		<p>if you'd like to <a href="../work/">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, i'd love to hear from you. i live in india and maybe delayed in my response if our timezone's don't match.</p>
 		</section></main> 
 		<section id=bio><details open="">
 			<summary><a>bio</a></summary>
