--- a/d/work/index.html
+++ b/d/work/index.html
@@ -42,7 +42,7 @@
 			<h3>my work usually involves : </h3>
 		<ul>
 			<li>policy analysis: economic and development policy, geopolitics, technology transfer, trade agreements.</li>
-			<li>empirical research: time series analysis, experimental design, qasi-Experimental Methods, sampling, hypothesis testing, causal and statistical inference, handling complex datasets.</li>
+			<li>empirical research: time series analysis, experimental design, qasi-experimental Methods, sampling, hypothesis testing, causal and statistical inference, handling complex datasets.</li>
 			<!--		<li>system software development - device driver, network driver,! <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  linux kernal debuging</li> -->
 			<li>data analysis: data pipeline, encompassing data cleansing, wrangling, visualization, model building, and interpretation.</li>				
 			<li>system administration: server maintenance, troubleshooting, networking (apache, nginx), peer-to-peer web technologies, custom kernel compilation, and managing cloud/VMs.</li>
@@ -50,7 +50,7 @@
 		</ul>
 		</section></main>
 		<section>
-			are you a non-profit, activist, researcher, individual, and budget is limited ?<br> I’m interested in helping to those who are working in the domain of:
+			are you a non-profit, activist, researcher, individual, and budget is limited ?  I’m interested in helping to those who are working in the domain of:
 			<ul>
 			<li>development</li>
 			<li>human rights</li>
@@ -59,7 +59,7 @@
     			<li>free education</li>
 			<li>social service and awareness</li>
 			</ul>
-			if this is you, please feel free to <a href="mailto:nikhil_eco23@iift.edu">get in touch</a>, i’ll be happy to discuss a cut-rate for my services. <br>i would also be willing to explore technologies and tools i am not familiar with as a way to mutually benefit us.
+			if this is you, please feel free to <a href="mailto:nikhil_eco23@iift.edu">get in touch</a>, i would also be willing to explore technologies and tools i am not familiar with as a way to mutually benefit us.
 		</section>
                 <section> <h4>currently, i’m available to work full-time, and am  looking for both full-time and part-time engagements.</h4></section>
 	  <footer>
