--- a/txt/about/index.html
+++ b/txt/about/index.html
@@ -35,7 +35,7 @@
 			</details>
 		</nav3>
 	</header>
-		<main> 
+	<main> 
 		<body>
 		<section id="info" class="h-card">
 			<h2></h2>
@@ -52,19 +52,19 @@
 Version: 3.12
 GCS/IT dpu s:-- a-- C++++ U++++ P+/++ L++++ E-/--- W++ N++ o? K- w-- O? M-- V? PS++ PE/<abbr title="money should be abolished">---</abbr> Y++ PGP t? 5? X? tv- b+ DI? D? G++ e++ h* !r/-- z-- 
 ------END GEEK CODE BLOCK------</code></pre></ul>
-		<p>If you'd like to <a href="../work/">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, </br>I'd love to hear from you, I live in India, I maybe delayed in my response if our timezone's don't match.</p>
+		<p>if you'd like to <a href="../work/">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, i'd love to hear from you. i live in india and maybe delayed in my response if our timezone's don't match.</p>
 		</section></main> 
 		<section id=bio><details open="">
 			<summary><a>bio</a></summary>
-			<p> i am a economics student, recently completed my master's with specialization in trade and finance. currently i am looking for research projects/engagement in the field of  behavioural science, nutrition, health economics & developmental economics.</p>
+			<p> i am a economics student, recently completed my master's in economics with specialization in trade and finance. currently i am looking for research projects/engagement in the field of  behavioural science, nutrition, health economics & developmental economics.</p>
 			<p> i am also an athlete, i do participate in track and field sports, i last participated in <a href="https://run.indianathletics.in/igp6/">indian grand prix vi 2019</a> and secures 3th position in 100m & 200m events.</pp>
-			<p>i also significantly contribute to the field of localization of FOSS (free and open-source software). i
-				localized the interface of <a href="https://github.com/jitsi/jitsi-meet/pull/8968">jitsi meet</a> and some parts of GNU documentation. i use and contribute to free and
-				open-source software, open data, and localization, and am currently part of the FSCI
+			<p>i also significantly contribute to the field of localization of foss (free and open-source software). i
+				localized the interface of <a href="https://github.com/jitsi/jitsi-meet/pull/8968">jitsi meet</a> and some parts of gnu documentation. i use and contribute to free and
+				open-source software, open data, and localization, and am currently part of the fsci
 				(free foftware community of india).</p>
-			<p> i am volunteering national service scheme (NSS) for last 5 years, we organize various events - health camp, blood donation camp, plantation and cleanliness drive, awareness programmes, street plays & unit camp in villages.</p> 
-			<p> i speak Hindi(native language), English, some bases of Indian Sign Language and other Indic Lannguages. </p>
-			<p>i also do sysadmin stuff, i like to tweak system, software, and hardware. i like experimenting with OpenStreetMap data, peer-to-peer web technologies,
+			<p> i am volunteering national service scheme (nss) for last 5 years, we organize various events - health camp, blood donation camp, plantation and cleanliness drive, awareness programmes, street plays & unit camp in villages.</p> 
+			<p> i speak hindi (native language), english, some bases of indian sign language and other indic Lannguages. </p>
+			<p>i also do sysadmin stuff, i like to tweak system, software, and hardware. i like experimenting with openstreetmap data, peer-to-peer web technologies,
 				custom kernel compilation, and open hardware like raspberry pi. </p>
 				<p>when i skateboarding i feel free, and i am avid listner of classic folk and rock music</p>
 		</section>
