--- a/d/about/index.html
+++ b/d/about/index.html
@@ -43,16 +43,16 @@
 					<img loading="lazy" class="invertible" style="max-width: 290px;" src="../../extras/images/2.png" alt=" "/></a><br />
 				</span>
 			<ul>
-				<li>Nikhil (निखिल)</li>
-				<li>Location: India</li>
-				<li>E-Mail: <a class="u-email" href="mailto:4wg@keemail.me">4wg@keemail.me</a></li>
+				<li>nikhil (निखिल)</li>
+				<li>location: india</li>
+				<li>e-mail: <a class="u-email" href="mailto:nikhil_eco23@iift.edu">nikhil_eco23@iift.edu</a></li>
 				<li>irc/Matrix: <a href="https://matrix.to/#/@on:tchncs.de" class="u-impp">on:tchncs.de</a></li>
 				<pre><a href="../nikhil-public-key.txt">gpg public key:</a><br>Key fingerprint = 733F 3B12 CA90 3C0A 8EE2  AF13 3C11 BC4C 1699 0E0A<br>uid  Nikhil <4wg@keemail.me></pre>
 				<pre><code>-----BEGIN <a href="https://web.archive.org/web/20150302173832/http://www.geekcode.com/geek.html">GEEK CODE</a> BLOCK-----
 Version: 3.12
 GCS/IT dpu s:-- a-- C++++ U++++ P+/++ L++++ E-/--- W++ N++ o? K- w-- O? M-- V? PS++ PE/<abbr title="money should be abolished">---</abbr> Y++ PGP t? 5? X? tv- b+ DI? D? G++ e++ h* !r/-- z-- 
 ------END GEEK CODE BLOCK------</code></pre></ul>
-		<p>if you'd like to <a href="../work/">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:4wg@keemail.me">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, i'd love to hear from you. i live in india and maybe delayed in my response if our timezone's don't match.</p>
+		<p>if you'd like to <a href="../work/">work with me</a>, share thoughts or ideas, or just say hello, please reach out via <a href="mailto:nikhil_eco23@iift.edu">email</a> or through <a href="https://matrix.to/#/@on:tchncs.de">matrix/irc</a>, i'd love to hear from you. i live in india and maybe delayed in my response if our timezone's don't match.</p>
 		</section></main> 
 		<section id=bio><details open="">
 			<summary><a>bio</a></summary>
