--- a/d/index.html
+++ b/d/index.html
@@ -41,7 +41,7 @@
 				<h3><br>List of articles</h3>
 				<ol class="indexlist">
                     <li><a href="articles/My%20issue%20with%20Github%20(and%20Microsoft%20buying%20it).html">My issue with Github (and Microsoft buying it)</a></li>
-                    <li><a href="articles/sysadmin.html">Why I am system admin</a></li>
+            <!--        <li><a href="articles/sysadmin.html">Why I am system admin</a></li> -->
                     <li><a href="articles/Pretty%20Bad%20Privacy.html">Pretty Bad Privacy</a></li>
 					<li><a href="articles/Disk%20identification.html">Disk identification</a></li>
 					<li><a href="articles/Entire%20Disk%20Encryption%20with%20LUKS%20and%20ZFS.html">Entire Disk Encryption with LUKS and ZFS</a></li>
