--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
 				<li>nikhil (निखिल)</li>
 				<li>location: india</li>
 				<li>e-mail: <a class="u-email" href="mailto:nikhil_eco23@iift.edu">nikhil_eco23@iift.edu</a></li>
-				<li>irc/Matrix: <a href="https://matrix.to/#/@on:tchncs.de" class="u-impp">on:tchncs.de</a></li>
+				<li>irc/matrix: <a href="https://matrix.to/#/@on:tchncs.de" class="u-impp">on:tchncs.de</a></li>
 				<pre><a href="../nikhil-public-key.txt">gpg public key:</a><br>Key fingerprint = 733F 3B12 CA90 3C0A 8EE2  AF13 3C11 BC4C 1699 0E0A<br>uid  Nikhil <4wg@keemail.me></pre>
 				<pre><code>-----BEGIN <a href="https://web.archive.org/web/20150302173832/http://www.geekcode.com/geek.html">GEEK CODE</a> BLOCK-----
 Version: 3.12
