--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/theme.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Home</title>
+		<title>About</title>
 	</head>
 	<header class="ccsticky-nav">
 		<nav>
@@ -56,7 +56,7 @@ GCS/IT dpu s:-- a-- C++++ U++++ P+/++ L++++ E-/--- W++ N++ o? K- w-- O? M-- V? P
 		</section></main> 
 		<section id=bio><details open="">
 			<summary><a>bio</a></summary>
-			<p> i am a economics student, recently completed my master's in economics with specialization in trade and finance. currently i am looking for research projects/engagement in the field of  behavioural science, nutrition, health economics & developmental economics.</p>
+			<p> i am a economics student, recently completed my master's in economics with specialization in trade and finance. currently i am looking for research projects/engagement in the field of trade, industrial organization, behavioural, health & developmental economics.</p>
 			<p> i am also an athlete, i do participate in track and field sports, i last participated in <a href="https://run.indianathletics.in/igp6/">indian grand prix vi 2019</a> and secures 3th position in 100m & 200m events.</pp>
 			<p>i also significantly contribute to the field of localization of foss (free and open-source software). i
 				localized the interface of <a href="https://github.com/jitsi/jitsi-meet/pull/8968">jitsi meet</a> and some parts of gnu documentation. i use and contribute to free and
