--- a/work/index.html
+++ b/work/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/theme.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Home</title>
+		<title>Work</title>
 	</head>
 	<header class="ccsticky-nav">
 		<nav>
@@ -52,6 +52,7 @@
 		<section>
 			are you a non-profit, activist, researcher, individual, and budget is limited ?  I’m interested in helping to those who are working in the domain of:
 			<ul>
+			<li>environment protection</li>
 			<li>development</li>
 			<li>human rights</li>
 			<li>sustainable development</li>
@@ -61,7 +62,7 @@
 			</ul>
 			if this is you, please feel free to <a href="mailto:nikhil_eco23@iift.edu">get in touch</a>, i would also be willing to explore technologies and tools i am not familiar with as a way to mutually benefit us.
 		</section>
-                <section> <h4>currently, i’m available to work full-time, and am  looking for both full-time and part-time engagements.</h4></section>
+                <section> <h4>currently, i’m not available to work full-time, and am looking for part-time engagements only.</h4></section>
 	  <footer>
        		 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img loading="lazy" alt="CC-BY-SA" src="https://mirrors.creativecommons.org/presskit/buttons/80x15/svg/by-sa.svg" /></a>
   	 </footer>
