--- a/work/index.x.html
+++ b/work/index.x.html
@@ -27,27 +27,30 @@
 		<themes><details close=""> <summary>Themes&ensp;&ensp;&ensp;</summary>&ensp;<a href="index.html">Dark Mode</a>&ensp;<br> &ensp;<a href="index.l.html">Light Mode</a></details></themes>		<main id=work> 
 
 		<section id=work> 
-			<h3>my work usally involves : </h3>
+			<h3>my work usually involves : </h3>
 		<ul>
-			<li>sysadmin</li>
+			<li>policy analysis: economic and development policy, geopolitics, technology transfer, trade agreements.</li>
+			<li>empirical research: time series analysis, experimental design, qasi-experimental Methods, sampling, hypothesis testing, causal and statistical inference, handling complex datasets.</li>
 			<!--		<li>system software development - device driver, network driver,! <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  linux kernal debuging</li> -->
+			<li>data analysis: data pipeline, encompassing data cleansing, wrangling, visualization, model building, and interpretation.</li>				
+			<li>system administration: server maintenance, troubleshooting, networking (apache, nginx), peer-to-peer web technologies, custom kernel compilation, and managing cloud/VMs.</li>
 			<li>activism/volunteering - planning, organising play/events/camps & writting, translating documentation</li>
-			<li>video editing</li>
 		</ul>
 		</section></main>
 		<section>
-			are you a non-profit, activist, researcher, individual, and budget is limited ?<br> I’m interested in helping to those who are working in the domain of:
+			are you a non-profit, activist, researcher, individual, and budget is limited ?  I’m interested in helping to those who are working in the domain of:
 			<ul>
-			<li>public policy</li>
-			<li>equality</li>
-			<li><a href="https://www.gnu.org/philosophy/free-sw.en.htm>">free software</a></li>
+			<li>environment protection</li>
+			<li>development</li>
+			<li>human rights</li>
+			<li>sustainable development</li>
+			<li><a href="https://www.gnu.org/philosophy/free-sw.en.htm>">foss</a></li>
     			<li>free education</li>
 			<li>social service and awareness</li>
-			<li>environment protection</li>
 			</ul>
-			if this is you, please feel free to <a href="mailto:4wg@keemail.me">get in touch</a>, i’ll be happy to discuss a cut-rate for my services. <br>i would also be willing to explore technologies and tools i am not familiar with as a way to mutually benefit us.
+			if this is you, please feel free to <a href="mailto:nikhil_eco23@iift.edu">get in touch</a>, i would also be willing to explore technologies and tools i am not familiar with as a way to mutually benefit us.
 		</section>
-                <section> <h4>i’m not available to work full-time from September 2020. at the moment, i am not taking any part-time engagements.</h4></section>
+                <section> <h4>currently, i’m not available to work full-time, and am looking for part-time engagements only.</h4></section>
 	  <footer>
        		 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img loading="lazy" alt="CC-BY-SA" src="https://mirrors.creativecommons.org/presskit/buttons/80x15/svg/by-sa.svg" /></a>
   	 </footer>
