--- a/visualization/top-exports.html
+++ b/visualization/top-exports.html
@@ -6,6 +6,25 @@
 		<title>Export Trends of Top Principle Commodities</title>
 	</head>
 	<header class="ccsticky-nav">
+		<nav>
+			<details open="">
+				<summary><a>Links</a></summary>
+				................................
+				<ul>
+					<li><a href="../" target="_parent">Home</a></li>
+					<li><a href="../about/" target="_parent">About Me</a></li>
+					<li><a href="../content" target="_parent">Visual</a></li>
+					<li><a href="../bookmarks" target="_parent">Bookmarks</a></li>
+					....................
+					<li><a href="../resume" target="_parent">Resume</a></li>
+					<li><a href="../work#work" target="_parent">work with me</a></li>
+					........................
+					<li><a href="https://git.fosscommunity.in/on2" target="_parent">/git/</a>: packages</li>
+					<li><a href="../project" target="_parent"> Projects</a></li>
+				</ul>
+				................................
+			</details>
+		</nav>
 
 
 <iframe width="1269" height="725" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTqN9BNivNrBqGdG1s9zCq8Bxw3g6zr0cHK1CRii3J9dzG0Pse8N-_Jc4W8UfqzXg/pubchart?oid=516704699&amp;format=interactive"></iframe>
