--- a/visualization/top-exports.html
+++ b/visualization/top-exports.html
@@ -7,7 +7,7 @@
 	</head>
 	<header class="ccsticky-nav">
 		<nav>
-			<details open="">
+			<details close="">
 				<summary><a>Links</a></summary>
 				................................
 				<ul>
